# neural_graph_mapping

./: .gitignore  .pixi.sh  LICENSE  README.md  index.html  pixi.toml  pyproject.toml  requirements-dev.txt  style.css
src/neural_graph_mapping/: camera.py  evaluation.py  geometry.py  graph.py  losses.py  mesh_culling.py  models.py  positional_encodings.py  run_mapping.py  simplify_mesh.py  slam_dataset.py  utils.py  vis_blender.py  vis_dataset.py  vis_mesh.py
src/neural_graph_mapping/config/: coslam_eval.yaml  kintinuous_dataset.yaml  neural_graph_map.yaml  newton_eval.yaml  nrgbd_dataset.yaml  replica_big_dataset.yaml  replica_imap_dataset.yaml  scannet_dataset.yaml
src/neural_graph_mapping/slam_datasets/: kintinuous_dataset.py  nrgbd_dataset.py  replica_dataset.py  scannet_dataset.py
